# BBC-News-API

./: .env  .gitignore  BBC-News-Wrapper.md  Endpoints.md  LICENSE  README.md  code.html  html.html  log.txt  main.py  netlify.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yml
api/: main.py
api/templates/: docs_scripts.js  docs_styles.css  documentation.html  index.css  index.html  index.js  scripts.js  sitemap.xml  styles.css
bbc/: BBC-News-Wrapper.md  README.md  __init__.py  exceptions.py  languages.py  news.py
