[tool.poetry]
name = "repl_nix_BBC-News-API"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
pytz = "^2022.7.1"
requests-html = "^0.10.0"
asgiref = "3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
